--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+#kl{
+background-color:  rgb(148, 186, 148);
+font-weight: bold;
+
+border-left: 8px double green;
+margin: 10px;
+padding:15px;
+max-width: 600px;
+background-color: #f8fffe ;
+}
