--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 background-color:  rgb(148, 186, 148);
 font-weight: bold;
 
-border-left: 8px double green;
+border-left: 8px solid green;
 margin: 10px;
 padding:15px;
 max-width: 600px;
